--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.2.0-beta1",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
